--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -6,5 +6,11 @@
 html,
 body {
   height: 100vh;
-  width: 100xw;
+  width: 100vw;
+  justify-content: center;
+}
+
+.container {
+  margin: auto;
+  max-width: 1170px;
 }
