--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -2,3 +2,5 @@
 @import "./base/base";
 
 @import "./components/navbar";
+@import "./components/searchbar";
+@import "./components/drowdowncategories";
