--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,6 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Cairo:wght@900&display=swap");
+
 @import "./base/settings";
 @import "./base/base";
 
 @import "./components/navbar";
 @import "./components/searchbar";
-@import "./components/drowdowncategories";
+@import "./components/ddcategories";
