--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -6,3 +6,4 @@
 @import "./components/navbar";
 @import "./components/searchbar";
 @import "./components/ddcategories";
+@import "./components/searchinput";
