--- a/src/styles/components/_searchbar.scss
+++ b/src/styles/components/_searchbar.scss
@@ -3,6 +3,13 @@
     display: flex;
 }
 .searchbar__categories{
+    display: flex;
+    align-items: center;
     width: 25%;
-    padding: 5px;
+
+}
+.searchbar__input{
+    width: 60%;
+    display: flex;
+    align-items: center;
 }
